login,authetication,get put show data done

--- a/src/components/css/dashboard.css
+++ b/src/components/css/dashboard.css
@@ -1,38 +1,41 @@
-body::before{
-    display:block;
-    content:"";
-    height:100px;
-
-    
-}
-/* 
-.content{
-    display: flex;
-    flex-direction: column;
-} */
-
-.sidenav{
-    min-height:100vh;
-    position:fixed;
+.sidenav {
+  min-height: 100vh;
+  position: fixed;
 }
 
-.matter{
-    margin-left:30%;
-    margin-right:5%;
+.matter {
+  margin-left: 25%;
+  margin-right: 5%;
+  margin-bottom: 3%;
 }
 
-ul{
-    list-style-type: none ;
+.catter {
+  margin-top: 7%;
+  margin-left: 9%;
 }
 
-@media screen and (max-width: 991.98px){
-    .matter{
-        margin-bottom: 2%;
-        margin-left:1%
-    }
-    .sidenav{
-        display:none
-    }
+ul {
+  list-style-type: none;
 }
 
-
+@media screen and (max-width: 991.98px) {
+  .matter {
+    margin-bottom: 2%;
+    margin-left: 0%;
+  }
+  .sidenav {
+    display: none;
+  }
+  .topbar {
+    margin-bottom: 6%;
+    margin-left: 0;
+  }
+  .catter {
+    /* margin-bottom:4%; */
+    margin-left: 0;
+  }
+}
+.topbar {
+  background-color: white;
+  position: fixed;
+}
