--- a/src/components/css/login.css
+++ b/src/components/css/login.css
@@ -3,3 +3,18 @@
 	content:"";
 	height:50px;
 } */
+.btn1 {
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 100%;
+  color: white;
+  background-color: black;
+  border-radius: 4px;
+  font-weight: bold;
+}
+.btn1:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+}
