--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -1,7 +1,21 @@
-body::before {
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@500&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Unbounded&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
+html {
+  scroll-padding: 10rem;
+}
+
+.home::before {
   display: block;
   content: "";
   height: 75px;
+}
+/* body {
+  background-color: #e6f8ff;
+} */
+* {
+  font-family: "Work Sans", sans-serif;
+  /* font-family: "Unbounded", cursive; */
 }
 .card {
   background-image: linear-gradient(
@@ -10,5 +24,12 @@ body::before {
     rgb(0, 153, 255)
   );
 }
-
-
+.headtext {
+  font-family: "Montserrat", sans-serif;
+}
+.logotext {
+  color: #007cc2;
+}
+.navtext {
+  color: #007cc2;
+}
